--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,13 @@
     <string name="hour">时</string>
     <string name="minute">分</string>
     <string name="second">秒</string>
+    <string name="delete">删除</string>
+    <string name="send">发送</string>
 
     <string name="app_name">日期选择控件</string>
     <string name="select_date">选择日期</string>
     <string name="current_date">当前日期</string>
     <string name="select_time">选择时间</string>
+    <string name="selected_time">已选择时间</string>
     <string name="current_time">当前时间</string>
 </resources>
