--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="minute">分</string>
     <string name="second">秒</string>
     <string name="delete">删除</string>
-    <string name="send">发送</string>
+    <string name="send">测试发送</string>
 
     <string name="app_name">日期选择控件</string>
     <string name="select_date">选择日期</string>
